--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary: black;
+$color-primary-light: #66fcf1;
+$color-primary-dark: #45a29e;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
@@ -19,10 +19,8 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
-
 // FONT
 $default-font-size: 1.6rem;
-
 
 // GRID
 $grid-width: 114rem;
